完成了语音消息功能 修复了结算bug

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
   <meta name="viewport"
     content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=0">
   <meta name="referrer" content="no-referrer">
-  <title>JM三张牌-是兄弟就来吓唬我!</title>
+  <title>JM三张牌-是兄弟就来唬我!</title>
 </head>
 
 <body>
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
+<script>
+
+</script>
 
 </html>
